[gd_scene load_steps=10 format=3 uid="uid://cdlyn6k8g551r"]

[ext_resource type="Texture2D" uid="uid://db0vjyicnvy8h" path="res://Assets/Fishies/Blue Tang-Sheet.png" id="1_k7rgt"]
[ext_resource type="Script" path="res://Scripts 'n Scenes/dori.gd" id="2_pfvth"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eaqai"]
atlas = ExtResource("1_k7rgt")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ah07"]
atlas = ExtResource("1_k7rgt")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3giun"]
atlas = ExtResource("1_k7rgt")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j755e"]
atlas = ExtResource("1_k7rgt")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_lbeku"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle_R",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaqai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ah07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3giun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j755e")
}],
"loop": true,
"name": &"swim_R",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_aqd6y"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y0bwr"]
radius = 8.0

[node name="Dori" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_lbeku")
animation = &"idle_R"
script = ExtResource("2_pfvth")

[node name="PDetect" type="Area2D" parent="."]
position = Vector2(0, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PDetect"]
shape = SubResource("CircleShape2D_aqd6y")

[node name="Detect" type="Area2D" parent="."]
position = Vector2(0, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource("CircleShape2D_y0bwr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 2)

[connection signal="area_entered" from="PDetect" to="." method="_on_p_detect_area_entered"]
[connection signal="area_exited" from="PDetect" to="." method="_on_p_detect_area_exited"]
[connection signal="area_entered" from="Detect" to="." method="_on_detect_area_entered"]
[connection signal="area_exited" from="Detect" to="." method="_on_detect_area_exited"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
